@@ -1,5 +1,6 @@
 2007-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* ijbridge.tcl: Command to get stats from bridge.
 	* ijbridge.tcl: Added some bot commands for access from
 	IRC. Can ask the bridge for jabber user names. Fixed receipt of
 	presence information.
